--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="main">
   <h1><button class="openbtn" onclick="openNav()">☰</button>  Apps World  </h1>
-  <p id="ht">New and updated games<button id='rb'>See more</button><p>
+  <p id="ht">New apps<button id='rb'>See more</button><p>
 </div>
 
 <script src='script.js'></script>
