--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Apps World</title>
+<title>Apps Pustak</title>
 <meta charset="UTF-8">
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -20,7 +20,7 @@
 </div>
 
 <div id="main">
-  <h1><button class="openbtn" onclick="openNav()">☰</button>  Apps World  </h1>
+  <h1><button class="openbtn" onclick="openNav()">☰</button>  Apps Pustak  </h1>
   <p id="ht">New apps<button id='rb'>See more</button><p>
 </div>
 
