--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a><br>
   <a href="#">About</a><br>
   <a href="#">Upload your app</a><br>
-  <a href="#">Clients</a><br>
-  <a href="#">Contact</a><br>
+  <a href="#">Report an issue</a><br>
+  <a href="#">Request an app</a><br>
 </div>
 
 <div id="main">
-  <h1><button class="openbtn" onclick="openNav()">☰</button>  Apps Pustak  </h1>
+  <h1><button class="openbtn" onclick="openNav()">☰</button>Apps Pustak</h1>
   <p id="ht">New apps<button id='rb'>See more</button><p>
 </div>
 
 <script src='script.js'></script>
-   
+
 </body>
-</html> 
+</html>
