--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <p id="ht">New apps<button id='rb'>See more</button><p>
 </div>
 
-<script src='script.js'></script>
+<script src='invisible.js'></script>
 
 </body>
 </html>
