--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 </div>
 
 <script src='script.js'></script>
-
+<script>
+window.alert('Warning!<br>This app is in development.')
+</script>
 </body>
 </html>
