--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <script src='script.js'></script>
 <script>
-window.alert('Warning!<br>This app is in development.')
+window.alert('Warning! This app is in development.')
 </script>
 </body>
 </html>
