--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="main">
   <h1><button class="openbtn" onclick="openNav()">☰</button>Apps Pustak</h1>
   <p id="ht">New apps<button id='rb'>See more</button><p>
-  <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F98%2F23%2Fa0%2F9823a0cdea4806d7c53f92d48b17a948.png&imgrefurl=https%3A%2F%2Fin.pinterest.com%2Fpin%2F730920214511215309%2F&tbnid=nBH3TX7TjPOYfM&vet=12ahUKEwi6ruec78XsAhWAkksFHYv1C1cQMygDegUIARCnAQ..i&docid=FzyuuHJICWLDrM&w=386&h=386&q=kinemaster%20logo%20png%20download&safe=active&ved=2ahUKEwi6ruec78XsAhWAkksFHYv1C1cQMygDegUIARCnAQ"
+  <img src="https://images.app.goo.gl/zVBtvSmUERTHmnYP7"
   alt="kinemaster image" class="app">
 </div>
 
