--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
 <div id="main">
   <h1><button class="openbtn" onclick="openNav()">☰</button>Apps Pustak</h1>
   <p id="ht">New apps<button id='rb'>See more</button><p>
-  <img src="https://i.pinimg.com/originals/98/23/a0/9823a0cdea4806d7c53f92d48b17a948.png"
-  alt="kinemaster image" class="app">
+  <table>
+  <tr>
+  <td><img src="https://i.pinimg.com/originals/98/23/a0/9823a0cdea4806d7c53f92d48b17a948.png"
+  alt="kinemaster image" class="app"></td>
+  </tr>
+  <tr>
+    <td>Kinemaster</td>
+  </tr>
 </div>
 
 <script src='script.js'></script>
