--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <title>Apps Pustak</title>
 <meta charset="UTF-8">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Hello friends, this is a simple app store and this is in development.
+  You can download various unlocked app from here and upload any app in free. This is a world of apps.">
+  <meta name="keywords" content="apps, play store, apps pustak, appspustak, app store, techno pustak, technopustak, app, download, app world">
   <meta name="author" content="Techno Pustak">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel='stylesheet' href='style.css' type='text/css'>
@@ -20,15 +21,13 @@
 </div>
 
 <div id="main">
-  <h1><button class="openbtn" onclick="openNav()">☰</button>Apps Pustak</h1>
+  <h1><button class="openbtn" onclick="openNav()">☰</button>     Apps Pustak</h1>
   <p id="ht">New apps<button id='rb'>See more</button><p>
   <table>
   <tr>
-  <td><img src="https://i.pinimg.com/originals/98/23/a0/9823a0cdea4806d7c53f92d48b17a948.png"
-  alt="kinemaster image" class="app"></td>
-  </tr>
-  <tr>
-    <td>Kinemaster</td>
+  <td><a href='C:\Users\lenovo\Documents\GitHub\appsworld.github.io\apps\kinemaster.html'
+    <img src="https://i.pinimg.com/originals/98/23/a0/9823a0cdea4806d7c53f92d48b17a948.png"
+  alt="kinemaster image" class="app"><br>Kinemaster</a></td>
   </tr>
 </div>
 
