--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <p id="ht">New apps<button id='rb'>See more</button><p>
   <table>
   <tr>
-  <td><a href='C:\Users\lenovo\Documents\GitHub\appsworld.github.io\apps\kinemaster.html'>
+  <td><a href='apps/kinemaster.html'>
     <img src="https://i.pinimg.com/originals/98/23/a0/9823a0cdea4806d7c53f92d48b17a948.png"
   alt="kinemaster image" class="app"><br>Kinemaster</a></td>
   </tr>
