--- a/apps/kinemaster.html
+++ b/apps/kinemaster.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="kinemaster, video editing, kine master, videoediting, video editing app, apps pustak, techno pustak">
   <meta name="author" content="Techno Pustak">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel='stylesheet' href='style.css' type='text/css'>
+<link rel='stylesheet' href="style.css" type='text/css'>
 </head>
 <body>
 <img src="https://i.pinimg.com/originals/98/23/a0/9823a0cdea4806d7c53f92d48b17a948.png"
