--- a/apps/kinemaster.html
+++ b/apps/kinemaster.html
@@ -15,7 +15,7 @@ class='app' alt='kinemaster image'>
 <p id='ht'>Kinemaster - The video editing app</p>
 <p>Published by:<a>Techno Pustak</a><br>
 <button id="rb">Download</button><br>
-Abut the app:-<br>
+About the app:-<br>
 Currently unavailable.<br></p>
 </body>
 </html>
