--- a/apps/kinemaster.html
+++ b/apps/kinemaster.html
@@ -13,9 +13,9 @@
 <img src="https://i.pinimg.com/originals/98/23/a0/9823a0cdea4806d7c53f92d48b17a948.png"
 class='app' alt='kinemaster image'>
 <p id='ht'>Kinemaster - The video editing app</p>
-<p>Published by:<a>Techno Pustak</a><br>
-<button id="rb">Download</button><br>
-About the app:-<br>
+<p>Published by:<a>Techno Pustak</a><br><br>
+<button id="rb">Download</button><br><br>
+About the app:-<br><br>
 Currently unavailable.<br></p>
 </body>
 </html>
