--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta name="author" content="Techno Pustak">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel='stylesheet' href='style.css' type='text/css'>
+<script type="text/javascript">
+    var adfly_id = 24187095;
+    var popunder_frequency_delay = 0;
+    var adfly_google_compliant = false;
+</script>
+<script src="https://cdn.adf.ly/js/display.js"></script>
 </head>
 <body>
 
