--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="apps, play store, apps pustak, appspustak, app store, techno pustak, technopustak, app, download, app world">
   <meta name="author" content="Techno Pustak">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel='stylesheet' href='style.css' type='text/css'>
 </head>
 <body>
 
