--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='style.css' type='text/css'>
   <script data-cfasync='false' type='text/javascript' src='//p416815.clksite.com/adServe/banners?tid=416815_818270_0'></script>
+  <script data-cfasync='false' type='text/javascript' src='//p416815.clksite.com/adServe/banners?tid=416815_818270_1'></script>
 </head>
 <body>
 
