--- a/apps/kinemaster.html
+++ b/apps/kinemaster.html
@@ -10,9 +10,13 @@
 <link rel='stylesheet' href="style.css" type='text/css'>
 </head>
 <body>
-<img src="https://i.pinimg.com/originals/98/23/a0/9823a0cdea4806d7c53f92d48b17a948.png"
-class='app' alt='kinemaster image'>
-<p id='ht'>Kinemaster - The video editing app</p>
+  <table>
+    <tr>
+<td><img src="https://i.pinimg.com/originals/98/23/a0/9823a0cdea4806d7c53f92d48b17a948.png"
+class='app' alt='kinemaster image'></td>
+<td><p id='ht'>Kinemaster - The video editing app</p></td>
+</tr>
+</table>
 <p>Published by:<a>Techno Pustak</a><br><br>
 <button id="rb">Download</button><br><br>
 About the app:-<br><br>
