--- a/apps/kinemaster.html
+++ b/apps/kinemaster.html
@@ -18,7 +18,7 @@ class='app' alt='kinemaster image'></td>
 </tr>
 </table>
 <p>Published by:<a>Techno Pustak</a><br><br>
-<a href="https://docs.google.com/u/0/uc?export=download&confirm=8sOK&id=1JPj63J0OnMXUdKywNkL3TGQ2KY1mickV">
+<a href="https://docs.google.com/u/0/uc?export=download&confirm=8sOK&id=1JPj63J0OnMXUdKywNkL3TGQ2KY1mickV" download>
   <button id="rb">Download</button></a><br><br>
 About the app:-<br><br>
 Currently unavailable.<br></p>
