--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <h1><button class="openbtn" onclick="openNav()">☰</button>     Apps Pustak</h1>
   <h2>How to download apps or games:-</h2>
   <p>1. Click on the icon of the app or game.<br>
-     2. An ad will come just scroll down the ad and click on get link after few seconds.
-     3. If a useless site will come then simply close the tab and you will redirect to the desired link.
-     4. Then click on download and download the apk file.
+     2. An ad will come just scroll down the ad and click on get link after few seconds.<br>
+     3. If a useless site will come then simply close the tab and you will redirect to the desired link.<br>
+     4. Then click on download and download the apk file.<br>
   <p id="ht">New apps<button id='rb'>See more</button><p>
   <table>
   <tr>
