--- a/apps/kinemaster.html
+++ b/apps/kinemaster.html
@@ -23,7 +23,7 @@ class='app' alt='kinemaster image'></td>
 </tr>
 </table>
 <p>Published by:<a>Techno Pustak</a><br><br>
-<a href="https://docs.google.com/u/0/uc?export=download&confirm=8sOK&id=1JPj63J0OnMXUdKywNkL3TGQ2KY1mickV" download>
+<a href=https://drive.google.com/uc?export=download&id=1JPj63J0OnMXUdKywNkL3TGQ2KY1mickV>
   <button id="rb">Download</button></a><br><br>
 About the app:-<br><br>
 Currently unavailable.<br></p>
