--- a/apps/kinemaster.html
+++ b/apps/kinemaster.html
@@ -23,7 +23,7 @@ class='app' alt='kinemaster image'></td>
 </tr>
 </table>
 <p>Published by:<a>Techno Pustak</a><br><br>
-<a href=https://drive.google.com/uc?export=download&id=1JPj63J0OnMXUdKywNkL3TGQ2KY1mickV>
+<a href="https://onedrive.live.com/download?cid=308F13814E2B5B0F&resid=308F13814E2B5B0F%21358&authkey=AOpYKZcbzJzrjxo">
   <button id="rb">Download</button></a><br><br>
 About the app:-<br><br>
 Currently unavailable.<br></p>
